--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "spd"
 version = "0.1.0"
 authors = ["Bryan Cantrill <bryan@oxide.computer>"]
 edition = "2018"
+license = "MPL-2.0"
 
 [dependencies]
 num-traits = { version = "0.2.12", default-features = false }
