--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ authors = ["Bryan Cantrill <bryan@oxide.computer>"]
 edition = "2018"
 license = "MPL-2.0"
 
+[profile.ci]
+inherits = "dev"
+debug = false # default true
+
 [dependencies]
 num-traits = { version = "0.2.12", default-features = false }
 num-derive = "0.3"
